to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.12 (In Progress)
============================

03/25/2002: ljohnson (Lyle Johnson)
            [Ruby] Fixed SWIG exception library support for Ruby, which
            has apparently been broken for some time. Luckily, no one seems
            to have noticed.

03/23/2002: beazley
            C++-namespace support in SWIG directives.

            %addmethods: 

            The %addmethods directive now accepts a fully qualified classname
            and can be used inside C++ namespace declarations.  For example:

                 // Attaches to the class Foo::Bar below
                 %addmethods Foo::Bar {
                     int somemethod() { ... }
                 };

                 namespace Foo {
                    class Bar {
                    public:
                        ...
                    };
                 
                    // Attaches to the class Bar above
                    %addmethods Bar {
                      int othermethod() { ... };
                    }
                 }

            %feature, %rename, %ignore, %exception, and related directives:

            Namespaces are fully integrated into the the renaming and declaration
            matcher.  For example:

                 %rename(display) Foo::print;          // Rename in namespace Foo
                 %ignore Foo::Bar::blah;               // Ignore a declaration

            %rename directives can be placed inside namespace blocks as well. For
            example:

                namespace Foo {
                   %rename(display) print;         // Applies to print below

                   void print();
                };
